2008-07-27  Vadim Kurland  <vadim@vk.crocodile.org>

	* ObjectManipulator.cpp (ObjectManipulator::duplicateWithDependencies):
	duplicate object that references other objects and create copies
	of these other objects. Examples: firewall (rules reference other
	object) and groups. This method is used in "Paste" operation. Will
	use it for d&d as well.

2008-07-26  Vadim Kurland  <vadim@vk.crocodile.org>

	* ObjectManipulator.cpp (ObjectManipulator::moveObj): code
	refactoring and cleaning up. Movig all loops over mdi child
	windows from ObjectManipulator class to the FWWindow class that
	owns all children windows. Along the way fixed few bugs, such as
	restored functions "Duplicate to .. " and "Move to ..." that are
	available via context menu associated with an object in the tree.

	* ProjectPanel_file_ops.cpp (ProjectPanel::saveIfModified):
	refactored class ProjectPanel to keep code more organized in
	several modules.

2008-07-25  Vadim Kurland  <vadim@vk.crocodile.org>

	* FWWindow.cpp (FWWindow::closeEvent): properly checking for
	unsaved modifications when user hits File/Exit or tries to close
	main window. 

	* ProjectPanel.cpp (ProjectPanel::fileCommit): fixed bug (no #):
	crash while doing File/Commit.

	* PolicyCompiler_ipt.cpp (checkForMatchingBroadcastAndMulticast):
	fixed bug (no #): crash in fwb_ipt when interface object is used
	in destination and chain is INPUT.

	* init.cpp: removed #include <QCoreApplication>, trying to fix bug
	#2027918: "Cannot compile fwbuilder-3.0.0-b413 on x86_64"

2008-07-24  Vadim Kurland  <vadim@vk.crocodile.org>

	* RCS.cpp (RCS::RCS): If data file has been added to RCS, show its
	revision history properly sorted by the revision number in
	ascending order and automatically select the latest revision in
	the dialog

2008-07-24  vadim  <vadim@vk.crocodile.org>

	* init.cpp (guessExecPath): properly managing path to the bundle
	on Mac.

2008-07-22  Vadim Kurland  <vadim@vk.crocodile.org>
