@@ -129,6 +129,8 @@ class ObjectManipulator : public QWidget/*ObjectManipulator_q*/ {
             libfwbuilder::ObjectGroup *gr,
             std::set<libfwbuilder::Firewall*> &fo);
 
+    int fixReferences(libfwbuilder::FWObject *obj, std::map<int,int> &map_ids);
+    
     ProjectPanel *m_project;
 
     
@@ -172,13 +174,6 @@ public slots:
                                           const QString &objType,
                                           const QString &objName,
                                           libfwbuilder::FWObject *copyFrom=NULL);
-     libfwbuilder::FWObject * copyObj2Tree(const QString &objType,
-                                           const QString &objName,
-                                           libfwbuilder::FWObject *copyFrom,
-                                           libfwbuilder::FWObject *parent=NULL,
-                                           bool ask4Lib=true);
-
-     libfwbuilder::FWObject * copyObjWithDeep(libfwbuilder::FWObject *copyFrom);
      
 
      void newLibrary();
